k8s/istio/order-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - cloudnative-gateway
  http:
  - match:
    - uri:
        prefix: /api/orders
    rewrite:
      uri: /orders
    route:
    - destination:
        host: order-service
        port:
          number: 8002
  - match:
    - uri:
        prefix: /api/order
    rewrite:
      uri: /order
    route:
    - destination:
        host: order-service
        port:
          number: 8002
  - match:
    - uri:
        regex: /api/order/(\d+)
    rewrite:
      uri: /order/{match[1]}
    route:
    - destination:
        host: order-service
        port:
          number: 8002
