k8s/istio/user-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - cloudnative-gateway
  http:
  - match:
    - uri:
        prefix: /api/users
    rewrite:
      uri: /users
    route:
    - destination:
        host: user-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /api/user
    rewrite:
      uri: /user
    route:
    - destination:
        host: user-service
        port:
          number: 8000
  - match:
    - uri:
        regex: /api/user/(\d+)
    rewrite:
      uri: /user/{match[1]}
    route:
    - destination:
        host: user-service
        port:
          number: 8000
